[package]
name = "tower-dubbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3"
tower = { version = "0.4",  features = ["full"] }
tower-service = "0.3"
tokio-tower = "0.7.0-rc4"
derive_builder = "0.12.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
pin-project = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
hdrhistogram = "7"
tokio-util = { version = "0.7", features = ["codec", "compat"] }
hessian_rs = "0.0.4-rc2"

